Edited utils functions

--- a/notebooks/finetune_SmolLM-135M-Instruct.ipynb
+++ b/notebooks/finetune_SmolLM-135M-Instruct.ipynb
@@ -26,12 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = \"HuggingFaceTB/SmolLM-135M-Instruct\""
+    "model_id = \"HuggingFaceTB/SmolLM-135M-Instruct\"\n",
+    "dataset_id = \"medalpaca/medical_meadow_medical_flashcards\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "89dfcaf0-5933-49a4-90b2-0048031ea1ca",
    "metadata": {},
    "outputs": [
@@ -46,19 +47,19 @@
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = load_dataset(\"medalpaca/medical_meadow_medical_flashcards\")\n",
+    "dataset = load_dataset(dataset_id)\n",
     "dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "ccb0b6d9-5c80-4954-a891-8dad576ef91e",
    "metadata": {},
    "outputs": [
@@ -70,7 +71,7 @@
        " 'instruction': 'Answer this question truthfully'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "d9940c83-307d-434c-8dd1-861bdde95c0f",
    "metadata": {},
    "outputs": [
@@ -96,25 +97,26 @@
        "})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def format_dataset(dataset):\n",
-    "    dataset = dataset.remove_columns(['instruction'])\n",
-    "    dataset = dataset.rename_column(\"output\", \"response\")\n",
-    "    dataset = dataset.rename_column(\"input\", \"instruction\")\n",
+    "def format_dataset(dataset, keys, instruction_col_name, response_col_name):\n",
+    "    cols_to_remove = [key for key in keys if key not in [instruction_col_name, response_col_name]]\n",
+    "    dataset = dataset.remove_columns(cols_to_remove)\n",
+    "    dataset = dataset.rename_column(instruction_col_name, \"instruction\")\n",
+    "    dataset = dataset.rename_column(response_col_name, \"response\")\n",
     "    return dataset\n",
     "\n",
-    "formatted_dataset = format_dataset(dataset)\n",
+    "formatted_dataset = format_dataset(dataset, list(dataset[\"train\"].features.keys()), \"input\", \"output\")\n",
     "formatted_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "b0731dab-a7fb-4dfe-88da-3e323c73c5ab",
    "metadata": {},
    "outputs": [
@@ -265,7 +267,7 @@
     ")\n",
     "\n",
     "output_dir = f\"fine-tuned-{model_id.split('/')[-1]}\"\n",
-    "\n",
+    "f\"{model_id.split('/')[-1]}-{env_vars['dataset_id'].split('/')[-1]}-5epochs\"\n",
     "\n",
     "sft_config = SFTConfig(\n",
     "    output_dir=output_dir,\n",
@@ -470,14 +472,6 @@
     "print(\"Fine-tuned model response:\")\n",
     "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be1d9f25-18a7-4958-966a-75db2279ac61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
