Hotfix output dir name

--- a/notebooks/finetune_SmolLM-135M-Instruct.ipynb
+++ b/notebooks/finetune_SmolLM-135M-Instruct.ipynb
@@ -266,8 +266,7 @@
     "    bias=\"none\"\n",
     ")\n",
     "\n",
-    "output_dir = f\"fine-tuned-{model_id.split('/')[-1]}\"\n",
-    "f\"{model_id.split('/')[-1]}-{env_vars['dataset_id'].split('/')[-1]}-5epochs\"\n",
+    "output_dir = f\"{model_id.split('/')[-1]}-{dataset_id.split('/')[-1]}-5epochs\"\n",
     "\n",
     "sft_config = SFTConfig(\n",
     "    output_dir=output_dir,\n",
