Evaluate the model

--- a/notebooks/finetune_SmolLM-135M-Instruct.ipynb
+++ b/notebooks/finetune_SmolLM-135M-Instruct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "970cac83-6ee7-46d3-9150-cdfbb8c62825",
    "metadata": {},
    "outputs": [],
@@ -371,12 +371,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f2b6e793-2efb-4659-b72c-c5446c5e4d4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'trainer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241m.\u001b[39mtrain()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'trainer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33f65fea-9d6e-44bb-b675-2e47f2cce083",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train()"
+    "trainer.evaluate()"
    ]
   },
   {
@@ -387,6 +409,14 @@
    "outputs": [],
    "source": [
     "trainer.save_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c8d914-6b4f-4488-88be-7c856f92114a",
+   "metadata": {},
+   "source": [
+    "Push the fine-tuned model to your HuggingFace"
    ]
   },
   {
@@ -410,6 +440,18 @@
     "\n",
     "print_example(example1)\n",
     "print_response(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b705dced-c8cc-41d7-8a58-d198b9eed9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hf_access_token = \"\"\n",
+    "if hf_access_token:\n",
+    "    trainer.push_to_hub(token=hf_access_token)"
    ]
   }
  ],
