Hotfix output directory naming

--- a/notebooks/finetune_SmolLM-135M-Instruct.ipynb
+++ b/notebooks/finetune_SmolLM-135M-Instruct.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "num_train_epochs = 5\n",
     "\n",
-    "output_dir = f\"{model_id.split('/')[-1]}-{dataset_id.split('/')[-1]}-{num_train_epochs}epochs-packing\"\n",
+    "output_dir = f\"{model_id.split('/')[-1]}-{dataset_id.split('/')[-1]}-{num_train_epochs}epochs\"\n",
     "\n",
     "sft_config = SFTConfig(\n",
     "    output_dir=output_dir,\n",
